<resources>
    <string name="app_name">TeaQuiz</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="check_the_resultBTN">Check the result</string>

    <string name="q1_txt">What tea has the most caffeine? (3,5% in dried leaves)</string>
    <string name="q1_1txt">Oolong</string>
    <string name="q1_2txt">Bancha</string>
    <string name="q1_3txt">Gyokuro</string>

    <string name="q2_txt">What type of tea is the most famous darjeeling tea?</string>
    <string name="q2_1txt">Black</string>
    <string name="q2_2txt">Blue</string>
    <string name="q2_3txt">White</string>

    <string name="q3_txt">What type of tea is best prepared at 95°C?</string>
    <string name="checkbox1_txt">Yellow</string>
    <string name="checkbox2_txt">Black</string>
    <string name="checkbox3_txt">Green</string>
    <string name="checkbox4_txt">White</string>
    <string name="checkbox5_txt">Red</string>

    <string name="q4_txt">What is your favorite type of tea?</string>

    <string name="dsfvsdfasdfa_vsdvs">dsfvsdfasdfa vsdvs</string>
    <string name="your_result_is">Your score is:</string>

</resources>
