<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="pl.nurikuuda.teaquiz.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_txt" />

                <RadioButton
                    android:id="@+id/q1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_1txt" />

                <RadioButton
                    android:id="@+id/q1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_2txt" />

                <RadioButton
                    android:id="@+id/q1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_3txt" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_txt" />

                <RadioButton
                    android:id="@+id/q2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_1txt" />

                <RadioButton
                    android:id="@+id/q2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_2txt" />

                <RadioButton
                    android:id="@+id/q2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_3txt" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_txt" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkbox1_txt" />
                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkbox2_txt" />
                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkbox3_txt" />
                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkbox4_txt" />
                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/checkbox5_txt" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_txt" />

                <EditText
                    android:id="@+id/q4_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showScore"
                android:padding="16dp"
                android:text="@string/check_the_resultBTN" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
